--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,11 +14,13 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/popup";
 
 
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/navigation";
 
 @import "pages/home";
 
